LPS-136691 manually shorten operationIds
