# modules/apps/headless/headless-admin-user/headless-admin-user-impl/rest-openapi.yaml
@@ -1046,6 +1046,7 @@ paths:
             # @review
             description:
                 Unassigns account users by email address from the account role
+            operationId: deleteAccountByExternalReferenceCodeAccountRoleUserAccountByEmailAddress
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1075,6 +1076,7 @@ paths:
             # @review
             description:
                 Assigns account users by email address to the account role
+            operationId: postAccountByExternalReferenceCodeAccountRoleUserAccountByEmailAddress
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1105,6 +1107,7 @@ paths:
             # @review
             description:
                 Unassigns account users by external reference code from the account role
+            operationId: deleteAccountByExternalReferenceCodeAccountRoleUserAccountByExternalReferenceCode
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1133,7 +1136,8 @@ paths:
         post:
             # @review
             description:
-                Assigns account users by extenal reference code to the account role
+                Assigns account users by external reference code to the account role
+            operationId: postAccountByExternalReferenceCodeAccountRoleUserAccountByExternalReferenceCode
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1164,6 +1168,7 @@ paths:
             # @review
             description:
                 Removes a user by their external reference code from an account by external reference code
+            operationId: deleteAccountByExternalReferenceCodeUserAccountByExternalReferenceCode
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1187,6 +1192,7 @@ paths:
             # @review
             description:
                 Assigns a user by their external reference code to an account by external reference code
+            operationId: postAccountByExternalReferenceCodeUserAccountByExternalReferenceCode
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1211,6 +1217,7 @@ paths:
             # @review
             description:
                 Gets a user's account roles by their external reference code from an account by external reference code
+            operationId: getAccountByExternalReferenceCodeUserAccountByExternalReferenceCodeAccountRolesPage
             parameters:
                 - in: path
                   name: accountExternalReferenceCode
@@ -1630,6 +1637,7 @@ paths:
             # @review
             description:
                 Gets a user's account roles by their email address from an account by external reference code
+            operationId: getAccountByExternalReferenceCodeUserAccountByEmailAddressAccountRolesPage
             parameters:
                 - in: path
                   name: externalReferenceCode
