# modules/apps/headless/headless-admin-user/headless-admin-user-impl/src/main/java/com/liferay/headless/admin/user/internal/resource/v1_0/UserAccountResourceImpl.java
@@ -115,7 +115,7 @@ public class UserAccountResourceImpl
 
 	@Override
 	public void
-			deleteAccountByExternalReferenceCodeAccountExternalReferenceCodeUserAccountByExternalReferenceCodeUserAccountExternalReferenceCode(
+			deleteAccountByExternalReferenceCodeUserAccountByExternalReferenceCode(
 				String accountExternalReferenceCode,
 				String userAccountExternalReferenceCode)
 		throws Exception {
@@ -371,7 +371,7 @@ public class UserAccountResourceImpl
 
 	@Override
 	public void
-			postAccountByExternalReferenceCodeAccountExternalReferenceCodeUserAccountByExternalReferenceCodeUserAccountExternalReferenceCode(
+			postAccountByExternalReferenceCodeUserAccountByExternalReferenceCode(
 				String accountExternalReferenceCode,
 				String userAccountExternalReferenceCode)
 		throws Exception {
